# riscv

./: .clang-format  .cursorrules  .gitignore  BUILD.md  CI_STATUS.md  CMakeLists.txt  CMakePresets.json  PHASE2_SUMMARY.md  PR_INFO.md  README.md  ROADMAP.md  claude.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-build.yml  ci-gem5.yml  ci-lint.yml
app/: CMakeLists.txt
app/include/: atomic.h  console.h  csr.h  gem5_se_io.h  htif.h  platform.h  smp.h  uart.h
app/include/rvv/: rvv_common.h  rvv_detect.h
app/linker/: gem5.ld  qemu-virt.ld  renode.ld  spike.ld
app/src/: gem5_se_io.c  htif.c  main.c  platform.c  smp.c  startup.S  uart.c
app/src/rvv/: rvv_detect.c  vec_add.c  vec_dotprod.c  vec_matmul.c  vec_memcpy.c  vec_saxpy.c
cmake/modules/: Formatting.cmake  Simulators.cmake
cmake/toolchain/: riscv64-elf.cmake
docs/: 00-project-overview.md  01-platform-assessment.md  02-baremetal-application.md  03-platform-configurations.md  04-rvv-vector-extension.md  05-build-system.md  06-ci-cd-pipeline.md  07-systemc-amp-platform.md
scripts/: parse-gem5-stats.py  run-gem5-both-modes.sh  run-gem5-compare-test.sh  run-renode-test.sh  setup-simulators.sh  setup-toolchain.sh  verify-environment.sh
tests/: CMakeLists.txt  CTestConfig.cmake
